[tool.poetry]
name = "chiff"
version = "0.1.0"
description = "Chiff command-line client."
authors = ["bas-d <7903735+bas-d@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://chiff.app"
repository = "https://github.com/chiff-app/chiff-cli"
include = [
    "LICENSE"
]
keywords = [
    "security",
    "ssh",
    "password"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: System :: Systems Administration"
]

[tool.poetry.dependencies]
python = "^3.7"
tldextract = "^2.2"
pykeepass = "^3.2"
pynacl = "^1.4"
click = "^8.0"
pillow = "^8.2"
requests = "^2.2"
qrcode = "^6.1"
tabulate = "^0.8.7"
python-daemon = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
chiff = "chiff.main:main"
chiffd = "chiff.socket:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

