[tool.poetry]
name = "chiff"
version = "0.3.0"
description = "Chiff command-line client."
authors = ["bas-d <7903735+bas-d@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://chiff.app"
repository = "https://github.com/chiff-app/chiff-cli"
include = ["LICENSE"]
keywords = ["security", "ssh", "password"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[tool.poetry.dependencies]
python = "^3.8.1"
tldextract = "^5.1.2"
pykeepass = "^4.0"
pynacl = "^1.4"
click = "^8.0"
pillow = "^10.1.0"
requests = "^2.2"
qrcode = "^7.3.1"
tabulate = "^0.9.0"
python-daemon = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
flake8 = "^7.0.0"
black = "^24.4.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
chiff = "chiff.main:main"
chiffd = "chiff.socket:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
